--- a/plugin-fw/languages/yith-plugin-fw-es_ES.po
+++ b/plugin-fw/languages/yith-plugin-fw-es_ES.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YITH Framework\n"
 "Report-Msgid-Bugs-To: YITH <plugins@yithemes.com>\n"
-"POT-Creation-Date: 2022-03-02 14:53:34+00:00\n"
-"PO-Revision-Date: 2021-12-13 13:19:03+0000\n"
+"POT-Creation-Date: 2022-04-02 10:27:44+00:00\n"
+"PO-Revision-Date: 2022-03-21 12:58:47+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -411,8 +411,8 @@ msgstr ""
 "instalada debido a un error entre tu sitio y nuestro servidor."
 
 #: templates/fields/ajax-customers.php:41
-msgid "Search Customers"
-msgstr "Buscar clientes"
+msgid "Search for a customer..."
+msgstr "Buscar un cliente..."
 
 #. translators: 1. user display name; 2. user ID; 3. user email.
 #: templates/fields/ajax-customers.php:68
@@ -421,16 +421,16 @@ msgid "%1$s (#%2$s &ndash; %3$s)"
 msgstr "%1$s (#%2$s &ndash; %3$s)"
 
 #: templates/fields/ajax-posts.php:41
-msgid "Search Posts"
-msgstr "Buscar entradas"
+msgid "Search for a post..."
+msgstr "Buscar una entrada..."
 
-#: templates/fields/ajax-products.php:14
-msgid "Search Product"
-msgstr "Buscar producto"
+#: templates/fields/ajax-products.php:16
+msgid "Search for a product..."
+msgstr "Buscar un producto..."
 
 #: templates/fields/ajax-terms.php:41
-msgid "Search Categories"
-msgstr "Buscar categorías"
+msgid "Search for a category..."
+msgstr "Buscar una categoría..."
 
 #: templates/fields/customtabs.php:17
 msgid "Close all"
@@ -738,7 +738,6 @@ msgid "Thank you for purchasing %s!"
 msgstr "¡Gracias por comprar %s!"
 
 #: includes/class-yit-plugin-panel.php:806
-#, fuzzy
 msgctxt "Help tab default description"
 msgid ""
 "We want to help you enjoy a wonderful experience with all of our products."
@@ -886,19 +885,17 @@ msgstr "Lee la documentación"
 #: templates/panel/help-tab.php:127
 msgctxt "Help tab Read Documentation link"
 msgid "to learn how the plugin works from the basics."
-msgstr ""
+msgstr "para aprender cómo funciona el plugin desde lo más básico."
 
 #: templates/panel/help-tab.php:137
-#, fuzzy
 msgctxt "Help tab Watch video tutorials link"
 msgid "Watch our video tutorials"
-msgstr "Vea nuestros videotutoriales"
+msgstr "Ve nuestros videotutoriales"
 
 #: templates/panel/help-tab.php:140
-#, fuzzy
 msgctxt "Help tab Watch video tutorials link"
 msgid "to see some helpful use cases."
-msgstr "Te mostramos algunos ejemplos de uso"
+msgstr "para ver algunos casos de uso útiles."
 
 #: templates/panel/help-tab.php:150
 msgctxt "Help tab view FAQs link"
@@ -906,10 +903,9 @@ msgid "Check the FAQs"
 msgstr "Comprueba los FAQ"
 
 #: templates/panel/help-tab.php:153
-#, fuzzy
 msgctxt "Help tab view FAQs link"
 msgid "to find answers to your doubts."
-msgstr "para encontrar respuestas a tus dudas"
+msgstr "para encontrar respuestas a tus dudas."
 
 #: templates/panel/help-tab.php:169
 msgctxt "Help tab FAQ title"
@@ -927,7 +923,6 @@ msgid "Need help?"
 msgstr "¿Necesitas ayuda?"
 
 #: templates/panel/help-tab.php:195
-#, fuzzy
 msgctxt "Help tab submit ticket description"
 msgid ""
 "If you are experiencing any technical issues, ask for help from our "
@@ -935,7 +930,8 @@ msgid ""
 "soon as possible."
 msgstr ""
 "Si tienes algún problema técnico, pide ayuda a nuestros desarrolladores. "
-"Envía un ticket en nuestro panel de soporte y te ayudaremos lo antes posible."
+"Envía un ticket a través de nuestro servicio de asistencia y te ayudaremos "
+"lo antes posible."
 
 #: templates/panel/help-tab.php:203
 msgctxt "Help tab submit ticket button"
@@ -1052,7 +1048,3 @@ msgstr "Versión premium"
 msgctxt "Action links"
 msgid "Settings"
 msgstr "Ajustes"
-
-#~ msgctxt "Help tab Read Documentation link"
-#~ msgid "to learn from basics how it works"
-#~ msgstr "para aprender desde lo más básico cómo funciona"
