--- a/plugin-fw/languages/yith-plugin-fw-it_IT.po
+++ b/plugin-fw/languages/yith-plugin-fw-it_IT.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YITH Framework\n"
 "Report-Msgid-Bugs-To: YITH <plugins@yithemes.com>\n"
-"POT-Creation-Date: 2022-03-02 14:53:34+00:00\n"
-"PO-Revision-Date: 2021-12-13 12:05:30+0000\n"
+"POT-Creation-Date: 2022-04-02 10:27:44+00:00\n"
+"PO-Revision-Date: 2022-03-21 13:01:47+0000\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -409,8 +409,8 @@ msgstr ""
 "causa di un problema di connessione fra il tuo sito e il nostro server."
 
 #: templates/fields/ajax-customers.php:41
-msgid "Search Customers"
-msgstr "Cerca fra i clienti"
+msgid "Search for a customer..."
+msgstr "Cerca un cliente..."
 
 #. translators: 1. user display name; 2. user ID; 3. user email.
 #: templates/fields/ajax-customers.php:68
@@ -419,16 +419,16 @@ msgid "%1$s (#%2$s &ndash; %3$s)"
 msgstr "%1$s (#%2$s &ndash; %3$s)"
 
 #: templates/fields/ajax-posts.php:41
-msgid "Search Posts"
-msgstr "Cerca articoli"
+msgid "Search for a post..."
+msgstr "Cerca un post..."
 
-#: templates/fields/ajax-products.php:14
-msgid "Search Product"
-msgstr "Cerca un prodotto"
+#: templates/fields/ajax-products.php:16
+msgid "Search for a product..."
+msgstr "Cerca un prodotto..."
 
 #: templates/fields/ajax-terms.php:41
-msgid "Search Categories"
-msgstr "Cerca categorie"
+msgid "Search for a category..."
+msgstr "Cerca una categoria..."
 
 #: templates/fields/customtabs.php:17
 msgid "Close all"
@@ -738,7 +738,6 @@ msgid "Thank you for purchasing %s!"
 msgstr "Grazie per aver acquistato %s!"
 
 #: includes/class-yit-plugin-panel.php:806
-#, fuzzy
 msgctxt "Help tab default description"
 msgid ""
 "We want to help you enjoy a wonderful experience with all of our products."
@@ -887,19 +886,17 @@ msgstr "Consulta la documentazione"
 #: templates/panel/help-tab.php:127
 msgctxt "Help tab Read Documentation link"
 msgid "to learn how the plugin works from the basics."
-msgstr ""
+msgstr "per scoprire dalle basi come funziona il plugin."
 
 #: templates/panel/help-tab.php:137
-#, fuzzy
 msgctxt "Help tab Watch video tutorials link"
 msgid "Watch our video tutorials"
 msgstr "Guarda i nostri video tutorial"
 
 #: templates/panel/help-tab.php:140
-#, fuzzy
 msgctxt "Help tab Watch video tutorials link"
 msgid "to see some helpful use cases."
-msgstr "Ti mostriamo alcuni casi d'uso"
+msgstr "per vedere dei casi d'utilizzo utili."
 
 #: templates/panel/help-tab.php:150
 msgctxt "Help tab view FAQs link"
@@ -907,10 +904,9 @@ msgid "Check the FAQs"
 msgstr "Controlla le FAQ"
 
 #: templates/panel/help-tab.php:153
-#, fuzzy
 msgctxt "Help tab view FAQs link"
 msgid "to find answers to your doubts."
-msgstr "per trovare le risposte ai tuoi dubbi"
+msgstr "per trovare le risposte ai tuoi dubbi."
 
 #: templates/panel/help-tab.php:169
 msgctxt "Help tab FAQ title"
@@ -928,7 +924,6 @@ msgid "Need help?"
 msgstr "Ti serve aiuto?"
 
 #: templates/panel/help-tab.php:195
-#, fuzzy
 msgctxt "Help tab submit ticket description"
 msgid ""
 "If you are experiencing any technical issues, ask for help from our "
@@ -1054,7 +1049,3 @@ msgstr "Versione premium"
 msgctxt "Action links"
 msgid "Settings"
 msgstr "Impostazioni"
-
-#~ msgctxt "Help tab Read Documentation link"
-#~ msgid "to learn from basics how it works"
-#~ msgstr "per imparare dalle basi come funziona"
