--- a/plugin-fw/languages/yith-plugin-fw-nl_NL.po
+++ b/plugin-fw/languages/yith-plugin-fw-nl_NL.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YITH Framework\n"
 "Report-Msgid-Bugs-To: YITH <plugins@yithemes.com>\n"
-"POT-Creation-Date: 2022-05-30 07:17:45+00:00\n"
+"POT-Creation-Date: 2022-07-06 06:26:03+00:00\n"
 "PO-Revision-Date: 2021-12-13 12:45:02+0000\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -671,6 +671,17 @@ msgstr "Database gratis grootte"
 #: templates/sysinfo/tabs/main.php:168
 msgid "Data: %1$.2fMB | Index: %2$.2fMB | Free: %3$.2fMB | Engine: %4$s"
 msgstr "Data: %1$.2fMB | Index: %2$.2fMB | Free: %3$.2fMB | Engine: %4$s"
+
+#. translators: 1. Plugin(s) name(s).
+#: yit-deactive-plugin.php:119
+msgid ""
+"%s was deactivated as you're running an higher tier version of the same "
+"plugin."
+msgid_plural ""
+"%s were deactivated as you're running higher tier versions of the same "
+"plugins."
+msgstr[0] ""
+msgstr[1] ""
 
 #. translators: %s is the title of the post object.
 #: yit-functions.php:1938
