--- a/plugin-fw/languages/yith-plugin-fw.pot
+++ b/plugin-fw/languages/yith-plugin-fw.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: YITH <plugins@yithemes.com>\n"
-"POT-Creation-Date: 2022-05-30 07:17:45+00:00\n"
+"POT-Creation-Date: 2022-07-06 06:26:03+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -648,6 +648,17 @@ msgstr ""
 #. Engine.
 msgid "Data: %1$.2fMB | Index: %2$.2fMB | Free: %3$.2fMB | Engine: %4$s"
 msgstr ""
+
+#: yit-deactive-plugin.php:119
+#. translators: 1. Plugin(s) name(s).
+msgid ""
+"%s was deactivated as you're running an higher tier version of the same "
+"plugin."
+msgid_plural ""
+"%s were deactivated as you're running higher tier versions of the same "
+"plugins."
+msgstr[0] ""
+msgstr[1] ""
 
 #: yit-functions.php:1938
 #. translators: %s is the title of the post object.
